objects/Profit_Center__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_10_Code__c</fullName>
        <label>Profit Center 10 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_10__c</fullName>
        <label>Profit Center 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_4_Code__c</fullName>
        <label>Profit Center 4 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_4__c</fullName>
        <label>Profit Center 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_5_Code__c</fullName>
        <label>Profit Center 5 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_5__c</fullName>
        <label>Profit Center 5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_Code__c</fullName>
        <label>ERP Profit Center Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_Level__c</fullName>
        <label>ERP Profit Center Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center__c</fullName>
        <label>ERP Profit Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Level__c</fullName>
        <label>Final Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Profit Center</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Building_Innovation</fullName>
        <columns>NAME</columns>
        <columns>ERP_Profit_Center_4__c</columns>
        <columns>ERP_Profit_Center_4_Code__c</columns>
        <columns>ERP_Profit_Center_5__c</columns>
        <columns>ERP_Profit_Center_5_Code__c</columns>
        <columns>ERP_Profit_Center_6__c</columns>
        <columns>ERP_Profit_Center_6_Code__c</columns>
        <columns>ERP_Profit_Center_7__c</columns>
        <columns>ERP_Profit_Center_7_Code__c</columns>
        <columns>ERP_Profit_Center_8__c</columns>
        <columns>ERP_Profit_Center_8_Code__c</columns>
        <columns>ERP_Profit_Center_9__c</columns>
        <columns>ERP_Profit_Center_9_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ERP_Profit_Center_4__c</field>
            <operation>contains</operation>
            <value>Building</value>
        </filters>
        <label>Building Innovation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Profit Center Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profit Center</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>